<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_fragment"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
        
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
	    
	    <Space android:id="@+id/market_dummy" 
	        android:layout_width="0dp" 
	        android:layout_height="0dp"
	        android:layout_centerHorizontal="true" 
	        android:visibility="invisible"/>
	
	    <TextView
	        android:id="@+id/market_text_select_exchange"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignBottom="@+id/market_select_exchange_spinner"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_alignRight="@+id/market_dummy"
	        android:text="@string/market_select_exchange" />
	
	    <Spinner
	        android:id="@+id/market_select_exchange_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/market_dummy"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:prompt="@string/market_select_exchange" />
	    
	   	<TextView
	        android:id="@+id/market_text_select_coin"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignBottom="@+id/market_select_coin_spinner"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/market_text_select_exchange"
	        android:layout_below="@+id/market_select_exchange_spinner"
	        android:text="@string/market_select_coin" />
	
	    <Spinner
	        android:id="@+id/market_select_coin_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/market_dummy"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_select_exchange_spinner"
	        android:prompt="@string/market_select_coin" />

	    <TextView
	        android:id="@+id/market_spacer1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_select_coin_spinner"
	        android:text="@string/null_string" />
	    
	    <TextView
	        android:id="@+id/market_text_exchange"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_spacer1"
	        android:gravity="center_horizontal"
	        android:text="@string/market_exchange_props"
	        android:textStyle="bold" />
	    
	    <TextView
		    android:id="@+id/market_fixed_text_price_btc"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/market_text_exchange"
		    android:text="@string/market_last_price" />

	    <TextView
	        android:id="@+id/market_text_price_xmr"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_text_exchange"
	        android:layout_toRightOf="@+id/market_fixed_text_price_btc"
	        android:gravity="right"
	        android:text="@string/null_string" />
	    
	    <TextView
		    android:id="@+id/market_fixed_text_exchange_change"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/market_fixed_text_price_btc"
		    android:text="@string/market_exchange_change" />

	    <TextView
	        android:id="@+id/market_text_exchange_change"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_text_price_xmr"
	        android:layout_toRightOf="@+id/market_fixed_text_exchange_change"
	        android:gravity="right"
	        android:text="@string/null_string" />
	    
	    <TextView
		    android:id="@+id/market_fixed_text_exchange_volume"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/market_fixed_text_exchange_change"
		    android:text="@string/market_exchange_volume" />

	    <TextView
	        android:id="@+id/market_text_exchange_volume"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_text_exchange_change"
	        android:layout_toRightOf="@+id/market_fixed_text_exchange_volume"
	        android:gravity="right"
	        android:text="@string/null_string" />
	    
	    <TextView
		    android:id="@+id/market_fixed_text_exchange_total_volume"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/market_fixed_text_exchange_volume"
		    android:text="@string/market_exchange_total_volume" />

	    <TextView
	        android:id="@+id/market_text_exchange_total_volume"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/market_text_exchange_volume"
	        android:layout_toRightOf="@+id/market_fixed_text_exchange_total_volume"
	        android:gravity="right"
	        android:text="@string/null_string" />

	</RelativeLayout>
    	

</ScrollView>